Archive2/79/bdcbc957eb9af3/output
main.cpp: In function ‘int main()’:
main.cpp:4:15: error: invalid use of ‘auto’
     decltype((auto)) y = x;
               ^
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:15: error: invalid use of ‘auto’
main.cpp:4:5: error: expected primary-expression before ‘decltype’
     decltype((auto)) y = x;
     ^
main.cpp:4:5: error: expected ‘;’ before ‘decltype’
main.cpp:3:9: warning: unused variable ‘x’ [-Wunused-variable]
     int x = 1234;
         ^
